# ShadowHive

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Caddyfile  DEPLOYMENT.md  Dockerfile  Makefile  README.md  ShadowHive.txt  USAGE.md  docker-compose.caddy.yml  docker-compose.nginx.yml  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
backend/: auth.py  database.py  main.py  neo4j_client.py
backend/ai/: __init__.py  anthropic_provider.py  base.py  factory.py  ollama_provider.py  openai_provider.py
backend/api/: admin.py  auth.py  company.py  deploy.py  events.py  graph.py  logs.py  sessions.py  stats.py  threats.py
backend/generators/: company_generator.py  document_generator.py  email_generator.py  employee_generator.py
backend/ingestion/: cowrie_client.py  honeypot_watcher.py
backend/models/: company.py  log.py  user.py
backend/schemas/: company.py
backend/services/: company_persister.py  company_service.py  graph_builder.py  honeypot_deployer.py  json_formatter.py  log_handler.py  metrics.py  mitre_mapper.py  rate_limiter.py  seed_data.py  task_manager.py  threat_analysis.py
backend/utils/: config.py  json_parser.py  timezone.py
configs/: default.yaml
frontend/: Dockerfile  next.config.ts  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/admin/users/: page.tsx
frontend/src/app/attackers/: page.tsx
frontend/src/app/change-password/: page.tsx
frontend/src/app/companies/: page.tsx
frontend/src/app/forgot-password/: page.tsx
frontend/src/app/intelligence/: page.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/reset-password/: page.tsx
frontend/src/components/: LoadingSpinner.tsx  Navbar.tsx  ProgressBar.tsx  StatCard.tsx  StatusBadge.tsx  TabBar.tsx
frontend/src/lib/: api.ts  auth-context.tsx  auth-guard.tsx
nginx/: Dockerfile  nginx.conf
portal/: main.py  requirements.txt
portal/static/: style.css
portal/templates/: about.html  admin.html  base.html  blog.html  careers.html  contact.html  index.html  team.html
scripts/: cowrie.cfg  init_neo4j.cypher
scripts/honeypots/: cowrie2.cfg  cowrie3.cfg  opencanary.json
tests/: conftest.py  test_ai_providers.py  test_api_auth.py  test_api_integration.py  test_auth_unit.py  test_config.py  test_honeypot_parse.py  test_honeypot_watcher.py  test_mitre_mapper.py  test_smoke.py
wordpress/: Dockerfile  log_watcher.py
