[project]
name = "shadowhive"
version = "0.1.0"
description = "Autonomous Deception and Adversary Intelligence — AI-Powered Adaptive Honeypot Personalities Platform"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "pyyaml>=6.0",
    "httpx>=0.27.0",
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.30.0",
    "psycopg2-binary>=2.9.0",
    "neo4j>=5.20.0",
    "alembic>=1.13.0",
    "langgraph>=0.3.0",
    "openai>=1.50.0",
    "anthropic>=0.45.0",
    "python-dotenv>=1.0.0",
    "rich>=13.0.0",
    "prometheus-client>=0.25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "aiosqlite>=0.20.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
    "pre-commit>=3.5.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["backend*"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
disallow_untyped_defs = false
check_untyped_defs = false
warn_unused_ignores = false
warn_redundant_casts = true
warn_unused_configs = true
warn_no_return = true
exclude = [
    "frontend/",
    "portal/",
    ".venv/",
    "scripts/",
    "tests/",
]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = [
    "F",     # pyflakes — errors
    "E",     # pycodestyle — errors
    "W",     # pycodestyle — warnings
    "I",     # isort
    "UP",    # pyupgrade
    "S",     # bandit — security
    "LOG",   # logging
    "G",     # logging-format
]
ignore = [
    "E501",   # line-too-long — handled by ruff formatter
    "S101",   # assert is fine in tests
    "S104",   # binding to all interfaces is intentional
    "S105",   # "bearer"/"admin123" are not passwords
    "S110",   # try-except-pass is intentional in heartbeat cancel
    "S311",   # random not suitable for crypto — we document this
    "S324",   # md5 in some contexts is OK
    "S608",   # false positive — uses bound parameters
    "G004",   # f-string in logging — tech debt, fix incrementally
    "G201",   # .exception() preferred
    "LOG014", # exc_info outside handler — false positive for exception_handler
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"
